--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <main class="w3-container">
         <h1 class="w3-panel w3-pale-green">Palabras por segundo</h1>
         <section id="next-word-card" class="w3-container w3-hide">
-            <div class="w3-panel w3-padding-16 w3-large" id="next-word"></div>
+            <div class="w3-panel w3-padding-16 w3-large" id="next-word">
+                
+            </div>
         </section>
         <section id="start-game">
             <button class="w3-btn w3-black">Empezar</button>
